--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
     "compilerOptions": {
       "module": "ES2015",
       "declaration": true,
+      "esModuleInterop": true,
       "lib": ["dom", "es2015"],
       "noImplicitAny": true,
       "removeComments": true,
@@ -11,4 +12,4 @@
     },
     "include": ["src/**/*"],
     "exclude": ["node_modules", "bin/*", "**/*.spec.ts", "**/tests/*"]
-    }
+}
