--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A core type to handle CoNLL-U format",
   "main": "bin/index.js",
   "homepage": "https://github.com/NattapongSiri/conllu_core",
+  "keywords": ["conllu", "universal dependencies", "corpus", "load", "parse", "serialize", "deserialize", "save", "read", "write"],
   "bugs": {
     "url": "https://github.com/NattapongSiri/conllu_core/issues"
   },
