--- a/package.json
+++ b/package.json
@@ -1,10 +1,21 @@
 {
   "name": "conllu-core",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "A core type to handle CoNLL-U format",
   "main": "bin/index.js",
   "homepage": "https://github.com/NattapongSiri/conllu_core",
-  "keywords": ["conllu", "universal dependencies", "corpus", "load", "parse", "serialize", "deserialize", "save", "read", "write"],
+  "keywords": [
+    "conllu",
+    "universal dependencies",
+    "corpus",
+    "load",
+    "parse",
+    "serialize",
+    "deserialize",
+    "save",
+    "read",
+    "write"
+  ],
   "bugs": {
     "url": "https://github.com/NattapongSiri/conllu_core/issues"
   },
