--- a/package.json
+++ b/package.json
@@ -28,22 +28,24 @@
   "scripts": {
     "build": "tsc",
     "clean": "rimraf ./bin/*",
-    "test": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha -r ts-node/register 'src/**/tests/**/*.ts' 'src/**/test/**/*.ts'"
+    "test": "TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\"}' mocha -r ts-node/register 'src/**/tests/**/*.ts' 'src/**/test/**/*.ts'"
   },
   "author": "Nattapong Sirilappanich",
   "license": "MIT",
   "devDependencies": {
-    "@types/chai": "^4.2",
+    "@types/chai": "^4.2.14",
     "@types/mocha": "^8.0",
-    "@types/node": "^14.11",
+    "@types/node": "^14.14.0",
     "@types/xregexp": "^4.3",
     "chai": "^4.2",
-    "mocha": "^8.1",
+    "lodash.clonedeep": "^4.5",
+    "mocha": "^8.2.0",
     "rimraf": "^3",
     "ts-node": "^9.0",
-    "typescript": "^4.0"
+    "typescript": "^4.0.3"
   },
   "dependencies": {
+    "assert": "^2.0.0",
     "xregexp": "^4.3"
   }
 }
