--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,16 @@
 {
     "compilerOptions": {
       "module": "ES2015",
+      "moduleResolution": "node",
       "declaration": true,
       "esModuleInterop": true,
-      "lib": ["dom", "es2015"],
+      "lib": ["dom", "es2020"],
       "noImplicitAny": true,
       "removeComments": false,
       "preserveConstEnums": true,
       "outDir": "bin",
-      "sourceMap": true
+      "sourceMap": true,
+      "target": "ES5"
     },
     "include": ["src/**/*"],
     "exclude": ["node_modules", "bin/*", "**/*.spec.ts", "**/tests/*"]
